passing all tests

--- a/index.html
+++ b/index.html
@@ -9,65 +9,53 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/home.css">
-    <title>Document</title>
+    <title>CORALS R COOL</title>
 </head>
 
 <body>
-    <header>
-        <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
-        </div>
+    <header id="top">
+        <div id="results-div"></div>
+        <h1 id="title">CORALS</h1>
+        <button id='button'>quiz!</button>
     </header>
     <main>
-        <section class="main-section">
-            <img class="main-logo" src="assets/alchemy-logo.png" />
-            <h2>
-                Welcome to Alchemy Bootstrap!
-            </h2>
-
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur
-                voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos
-                praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores
-                provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente
-                excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil
-                inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi
-                reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit
-                possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis
-                ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa
-                praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis
-                exercitationem?
-            </p>
-            <hr />
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur
-                voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos
-                praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores
-                provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente
-                excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil
-                inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi
-                reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit
-                possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis
-                ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa
-                praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis
-                exercitationem?
-            </p>
-
+        <img id='sky-visible'
+            src="https://assets.atlasobscura.com/media/W1siZiIsInVwbG9hZHMvYXNzZXRzL2NlMGU3MWVhNjJjMDcwMmU5MV9NTl8xMzc5LmpwZyJdLFsicCIsImNvbnZlcnQiLCIiXSxbInAiLCJjb252ZXJ0IiwiLXF1YWxpdHkgODEgLWF1dG8tb3JpZW50Il0sWyJwIiwidGh1bWIiLCIxMjgweD4iXV0/MN_1379.jpg" />
+        <section id="paragraph-one">
+            Some corals are able to catch plankton and small fish using stinging cells on their tentacles, most corals
+            obtain the majority of their energy and nutrients from photosynthetic unicellular dinoflagellates of the
+            genus Symbiodinium that live within their tissues. These are commonly known as zooxanthellae and give the
+            coral color. Such corals require sunlight and grow in clear, shallow water, typically at depths less than 60
+            metres (200 feet; 33 fathoms). Corals are major contributors to the physical structure of the coral reefs
+            that develop in tropical and subtropical waters, such as the Great Barrier Reef off the coast of Australia.
+            These corals are increasingly at risk of bleaching events where polyps expel the zooxanthellae in response
+            to stress such as high water temperature or toxins.
         </section>
-    </main>
-    <footer>
-        <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
-    </footer>
+        <ul>Anatomic Categories
+            <li>Soft Corals</li>
+            <li>Stony Corals</li>
+        </ul>
+        <img id='coral-chart'
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Relationships_between_corals_and_their_microbial_symbionts.jpg/1060px-Relationships_between_corals_and_their_microbial_symbionts.jpg" />
+        <section id="paragraph-two">
+            A set of tentacles surround a central mouth opening. Each polyp excretes an exoskeleton near the base. Over
+            many generations, the colony thus creates a skeleton characteristic of the species which can measure up to
+            several meters in size. Individual colonies grow by asexual reproduction of polyps. Corals also breed
+            sexually by spawning: polyps of the same species release gametes simultaneously overnight, often around a
+            full moon. Fertilized eggs form planulae, a mobile early form of the coral polyp which when mature settles
+            to form a new colony.
+        </section>
+        <ol>Routes of Coral Reproduction
+            <li>Broadcasters</li>
+            <li>Brooders</li>
+            <li>Planulae</li>
+            <li>Colony Division</li>
+        </ol>
+        <footer>
 
-    <script type="module" src="./app.js"></script>
+        </footer>
+    </main>
+    <script type='module' src="app.js"></script>
 </body>
 
 </html>
