style changes made

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <img id='sky-visible'
             src="https://assets.atlasobscura.com/media/W1siZiIsInVwbG9hZHMvYXNzZXRzL2NlMGU3MWVhNjJjMDcwMmU5MV9NTl8xMzc5LmpwZyJdLFsicCIsImNvbnZlcnQiLCIiXSxbInAiLCJjb252ZXJ0IiwiLXF1YWxpdHkgODEgLWF1dG8tb3JpZW50Il0sWyJwIiwidGh1bWIiLCIxMjgweD4iXV0/MN_1379.jpg" />
-        <section id="paragraph-one">
+        <section class="paragraph">
             Some corals are able to catch plankton and small fish using stinging cells on their tentacles, most corals
             obtain the majority of their energy and nutrients from photosynthetic unicellular dinoflagellates of the
             genus Symbiodinium that live within their tissues. These are commonly known as zooxanthellae and give the
@@ -37,7 +37,7 @@
         </ul>
         <img id='coral-chart'
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Relationships_between_corals_and_their_microbial_symbionts.jpg/1060px-Relationships_between_corals_and_their_microbial_symbionts.jpg" />
-        <section id="paragraph-two">
+        <section class="paragraph">
             A set of tentacles surround a central mouth opening. Each polyp excretes an exoskeleton near the base. Over
             many generations, the colony thus creates a skeleton characteristic of the species which can measure up to
             several meters in size. Individual colonies grow by asexual reproduction of polyps. Corals also breed
@@ -46,13 +46,13 @@
             to form a new colony.
         </section>
         <ol>Routes of Coral Reproduction
-            <li>Broadcasters</li>
-            <li>Brooders</li>
-            <li>Planulae</li>
-            <li>Colony Division</li>
+            <li>1. Broadcasters</li>
+            <li>2. Brooders</li>
+            <li>3. Planulae</li>
+            <li>4. Colony Division</li>
         </ol>
         <footer>
-
+            Now take the quiz at the top of the page!
         </footer>
     </main>
     <script type='module' src="app.js"></script>
